--- a/Draw/Controller/Feed/FeedDetail/CommentHeaderView.xib
+++ b/Draw/Controller/Feed/FeedDetail/CommentHeaderView.xib
@@ -35,113 +35,14 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIButton" id="341813593">
+					<object class="IBUIView" id="882872348">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{7, 0}, {72, 37}}</string>
+						<string key="NSFrame">{{0, 36}, {302, 1}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="487294455"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<int key="IBUITag">3</int>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUINormalTitle">评论(10000)</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="1060799422">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-						</object>
-						<object class="NSColor" key="IBUISelectedTitleColor" id="461764367">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAAA</bytes>
-						</object>
-						<object class="NSColor" key="IBUINormalTitleColor" id="553555578">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC41MTQ1OTg1NDAxAA</bytes>
-						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="629093696">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC41AA</bytes>
-						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="355787145">
-							<int key="type">1</int>
-							<double key="pointSize">13</double>
-						</object>
-						<object class="NSFont" key="IBUIFont" id="858474215">
-							<string key="NSName">Helvetica</string>
-							<double key="NSSize">13</double>
-							<int key="NSfFlags">16</int>
-						</object>
-					</object>
-					<object class="IBUIButton" id="487294455">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{79, 0}, {72, 37}}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="612215988"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<int key="IBUITag">2</int>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUINormalTitle">猜画(200)</string>
-						<reference key="IBUIHighlightedTitleColor" ref="1060799422"/>
-						<reference key="IBUISelectedTitleColor" ref="461764367"/>
-						<reference key="IBUINormalTitleColor" ref="553555578"/>
-						<reference key="IBUINormalTitleShadowColor" ref="629093696"/>
-						<reference key="IBUIFontDescription" ref="355787145"/>
-						<reference key="IBUIFont" ref="858474215"/>
-					</object>
-					<object class="IBUIButton" id="612215988">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{151, 0}, {72, 37}}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="908288305"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<int key="IBUITag">6</int>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUINormalTitle">鲜花(80)</string>
-						<reference key="IBUIHighlightedTitleColor" ref="1060799422"/>
-						<reference key="IBUISelectedTitleColor" ref="461764367"/>
-						<reference key="IBUINormalTitleColor" ref="553555578"/>
-						<reference key="IBUINormalTitleShadowColor" ref="629093696"/>
-						<reference key="IBUIFontDescription" ref="355787145"/>
-						<reference key="IBUIFont" ref="858474215"/>
-					</object>
-					<object class="IBUIButton" id="908288305">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{223, 0}, {72, 37}}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
-						<bool key="IBUIOpaque">NO</bool>
-						<int key="IBUITag">7</int>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUINormalTitle">番茄(10)</string>
-						<reference key="IBUIHighlightedTitleColor" ref="1060799422"/>
-						<reference key="IBUISelectedTitleColor" ref="461764367"/>
-						<reference key="IBUINormalTitleColor" ref="553555578"/>
-						<reference key="IBUINormalTitleShadowColor" ref="629093696"/>
-						<reference key="IBUIFontDescription" ref="355787145"/>
-						<reference key="IBUIFont" ref="858474215"/>
-					</object>
-					<object class="IBUIView" id="778527852">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">301</int>
-						<string key="NSFrame">{{40, 9}, {1, 19}}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="659425334"/>
-						<object class="NSColor" key="IBUIBackgroundColor" id="837734533">
+						<reference key="NSNextKeyView" ref="172346634"/>
+						<object class="NSColor" key="IBUIBackgroundColor" id="499969197">
 							<int key="NSColorSpace">10</int>
 							<object class="NSImage" key="NSImage">
 								<int key="NSImageFlags">549453824</int>
@@ -200,28 +101,137 @@ AAgACAAIAAEAAQABAAE</bytes>
 							</object>
 							<string key="IBUIColorCocoaTouchKeyPath">groupTableViewBackgroundColor</string>
 						</object>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
+					<object class="IBUIButton" id="131021674">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{7, 0}, {72, 37}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="868261575"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUITag">3</int>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUINormalTitle">评论(10000)</string>
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="813830947">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MQA</bytes>
+						</object>
+						<object class="NSColor" key="IBUISelectedTitleColor" id="546644767">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAwIDAAA</bytes>
+						</object>
+						<object class="NSColor" key="IBUINormalTitleColor" id="56304588">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MC41MTQ1OTg1NDAxAA</bytes>
+						</object>
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="648370433">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MC41AA</bytes>
+						</object>
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="729105510">
+							<int key="type">1</int>
+							<double key="pointSize">13</double>
+						</object>
+						<object class="NSFont" key="IBUIFont" id="467792324">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">13</double>
+							<int key="NSfFlags">16</int>
+						</object>
+					</object>
+					<object class="IBUIButton" id="172346634">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{79, 0}, {72, 37}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="535364148"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUITag">2</int>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUINormalTitle">猜画(200)</string>
+						<reference key="IBUIHighlightedTitleColor" ref="813830947"/>
+						<reference key="IBUISelectedTitleColor" ref="546644767"/>
+						<reference key="IBUINormalTitleColor" ref="56304588"/>
+						<reference key="IBUINormalTitleShadowColor" ref="648370433"/>
+						<reference key="IBUIFontDescription" ref="729105510"/>
+						<reference key="IBUIFont" ref="467792324"/>
+					</object>
+					<object class="IBUIButton" id="70869917">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{151, 0}, {72, 37}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="920436055"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUITag">6</int>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUINormalTitle">鲜花(80)</string>
+						<reference key="IBUIHighlightedTitleColor" ref="813830947"/>
+						<reference key="IBUISelectedTitleColor" ref="546644767"/>
+						<reference key="IBUINormalTitleColor" ref="56304588"/>
+						<reference key="IBUINormalTitleShadowColor" ref="648370433"/>
+						<reference key="IBUIFontDescription" ref="729105510"/>
+						<reference key="IBUIFont" ref="467792324"/>
+					</object>
+					<object class="IBUIButton" id="154795329">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{223, 0}, {72, 37}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<int key="IBUITag">7</int>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUINormalTitle">番茄(10)</string>
+						<reference key="IBUIHighlightedTitleColor" ref="813830947"/>
+						<reference key="IBUISelectedTitleColor" ref="546644767"/>
+						<reference key="IBUINormalTitleColor" ref="56304588"/>
+						<reference key="IBUINormalTitleShadowColor" ref="648370433"/>
+						<reference key="IBUIFontDescription" ref="729105510"/>
+						<reference key="IBUIFont" ref="467792324"/>
+					</object>
+					<object class="IBUIView" id="868261575">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">301</int>
+						<string key="NSFrame">{{40, 9}, {1, 19}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="882872348"/>
+						<reference key="IBUIBackgroundColor" ref="499969197"/>
 						<int key="IBUITag">200</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="659425334">
+					<object class="IBUIView" id="535364148">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">301</int>
 						<string key="NSFrame">{{150, 9}, {1, 19}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="845435658"/>
-						<reference key="IBUIBackgroundColor" ref="837734533"/>
+						<reference key="NSNextKeyView" ref="70869917"/>
+						<reference key="IBUIBackgroundColor" ref="499969197"/>
 						<int key="IBUITag">600</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="845435658">
+					<object class="IBUIView" id="920436055">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">301</int>
 						<string key="NSFrame">{{180, 9}, {1, 19}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
-						<reference key="IBUIBackgroundColor" ref="837734533"/>
+						<reference key="NSNextKeyView" ref="154795329"/>
+						<reference key="IBUIBackgroundColor" ref="499969197"/>
 						<int key="IBUITag">700</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
@@ -229,8 +239,8 @@ AAgACAAIAAEAAQABAAE</bytes>
 				<string key="NSFrameSize">{302, 37}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="778527852"/>
-				<reference key="IBUIBackgroundColor" ref="1060799422"/>
+				<reference key="NSNextKeyView" ref="131021674"/>
+				<reference key="IBUIBackgroundColor" ref="813830947"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</array>
@@ -239,7 +249,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickButton:</string>
-						<reference key="source" ref="341813593"/>
+						<reference key="source" ref="131021674"/>
 						<reference key="destination" ref="191373211"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -248,7 +258,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickButton:</string>
-						<reference key="source" ref="487294455"/>
+						<reference key="source" ref="172346634"/>
 						<reference key="destination" ref="191373211"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -257,7 +267,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickButton:</string>
-						<reference key="source" ref="612215988"/>
+						<reference key="source" ref="70869917"/>
 						<reference key="destination" ref="191373211"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -266,7 +276,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickButton:</string>
-						<reference key="source" ref="908288305"/>
+						<reference key="source" ref="154795329"/>
 						<reference key="destination" ref="191373211"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -285,13 +295,14 @@ AAgACAAIAAEAAQABAAE</bytes>
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="341813593"/>
-							<reference ref="487294455"/>
-							<reference ref="612215988"/>
-							<reference ref="908288305"/>
-							<reference ref="778527852"/>
-							<reference ref="659425334"/>
-							<reference ref="845435658"/>
+							<reference ref="131021674"/>
+							<reference ref="172346634"/>
+							<reference ref="70869917"/>
+							<reference ref="154795329"/>
+							<reference ref="868261575"/>
+							<reference ref="535364148"/>
+							<reference ref="920436055"/>
+							<reference ref="882872348"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -308,37 +319,42 @@ AAgACAAIAAEAAQABAAE</bytes>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="341813593"/>
+						<reference key="object" ref="131021674"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="487294455"/>
+						<reference key="object" ref="172346634"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="612215988"/>
+						<reference key="object" ref="70869917"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
-						<reference key="object" ref="908288305"/>
+						<reference key="object" ref="154795329"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">16</int>
-						<reference key="object" ref="778527852"/>
+						<reference key="object" ref="868261575"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
-						<reference key="object" ref="659425334"/>
+						<reference key="object" ref="535364148"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">18</int>
-						<reference key="object" ref="845435658"/>
+						<reference key="object" ref="920436055"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">19</int>
+						<reference key="object" ref="882872348"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -353,6 +369,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="0.0" key="4.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -366,7 +383,7 @@ AAgACAAIAAEAAQABAAE</bytes>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">18</int>
+			<int key="maxID">19</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
